<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/images" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="Insert your name"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine" />

        <TextView
            android:text="@string/firstQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radiofirstAnsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAnsOne"
                android:onClick="onRadioButtonClickedOne"/>
            <RadioButton android:id="@+id/radiofirstAnsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAnsTwo"
                android:onClick="onRadioButtonClickedOne"/>
            <RadioButton android:id="@+id/radiofirstAnsThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAnsThree"
                android:onClick="onRadioButtonClickedOne"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/secondQuest"
            android:textAllCaps="true" />

            <CheckBox android:id="@+id/checkboxSecondAnsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondAnsOne"
                android:onClick="onCheckboxClickedOne"/>
            <CheckBox android:id="@+id/checkboxSecondAnsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondAnsTwo"
                android:onClick="onCheckboxClickedOne"/>
            <CheckBox android:id="@+id/checkboxSecondAnsThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondAnsThree"
                android:onClick="onCheckboxClickedOne"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/thirdQuest"
            android:textAllCaps="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radioThirdAnsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdAnsOne"
                android:onClick="onRadioButtonClickedTwo"/>
            <RadioButton android:id="@+id/radioThirdAnsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdAnsTwo"
                android:onClick="onRadioButtonClickedTwo"/>
            <RadioButton android:id="@+id/radioThirdAnsthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdAnsthree"
                android:onClick="onRadioButtonClickedTwo"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/fourQuest"
            android:textAllCaps="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radioFourAnsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourAnsOne"
                android:onClick="onRadioButtonClickedThree"/>
            <RadioButton android:id="@+id/radioFourAnsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourAnsTwo"
                android:onClick="onRadioButtonClickedThree"/>
            <RadioButton android:id="@+id/radiofourAnsThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourAnsThree"
                android:onClick="onRadioButtonClickedThree"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/fivequest"
            android:textAllCaps="true" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radioFiveAnsOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveAnsOne"
                android:onClick="onRadioButtonClickedFour"/>
            <RadioButton android:id="@+id/radioFiveAnsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstAnsTwo"
                android:onClick="onRadioButtonClickedFour"/>
            <RadioButton android:id="@+id/radioFiveAnsThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiveAnsThree"
                android:onClick="onRadioButtonClickedFour"/>
        </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:text="Check Drive"
            android:layout_marginTop="20dp"
            android:onClick="btnSubmit"/>



    </LinearLayout>
</ScrollView>